# EXP-SFML-Game1

./: CMakeLists.txt  README.md
src/: main.cpp
src/Core/: CoreSimulation.cpp  CoreSimulation.h
src/Globals/: color.h  defaults.h  paths.h
src/Level/: Level.cpp  Level.h
src/Physical/: Movable.cpp  Movable.h
src/Shapes/: CircleEntity.cpp  CircleEntity.h  RectangleEntity.cpp  RectangleEntity.h
src/Test/: test.h
src/Utils/: Frametime.h  Math.cpp  Math.h  SimulationExceptions.cpp  SimulationExceptions.h  expect.h  print.cpp  print.h
src/defaults/: defaults.h
src/shapes/: shapes.cpp  shapes.h
src/text/: text.cpp  text.h
